--- a/TestVi/app/src/main/res/values-zh-rCN/strings.xml
+++ b/TestVi/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
   ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
   -->
 <resources>
-  <string name="app_name">我的VPN</string>
+  <string name="app_name">VPN通道</string>
   <string name="action_settings">动作设置</string>
   <string name="ab_not_route_to_vpn">路由</string>
   <string name="ab_persist_tun">开启tun通道</string>
