--- a/TestVi/app/src/main/res/values/strings.xml
+++ b/TestVi/app/src/main/res/values/strings.xml
@@ -397,5 +397,6 @@
     <string name="permission_revoked">VPN permission revoked by OS (e.g. other VPN program started), stopping VPN</string>
     <string name="pushpeerinfo">Push Peer info</string>
     <string name="pushpeerinfosummary">Send extra information to the server, e.g. SSL version and Android version</string>
+    <string name="hello_world">hello world</string>
 
 </resources>
